# Generated by Django 5.2.14 on 2026-05-23 10:21

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("catalog", "0001_initial"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="AuctionMedia",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "media_type",
                    models.CharField(
                        choices=[
                            ("image", "Image"),
                            ("video", "Video"),
                            ("file", "File"),
                        ],
                        max_length=16,
                    ),
                ),
                ("file_data", models.BinaryField()),
                ("file_type", models.CharField(max_length=128)),
                ("file_name", models.CharField(blank=True, max_length=255)),
                ("is_blurred", models.BooleanField(default=False)),
                ("sort_order", models.PositiveSmallIntegerField(default=0)),
            ],
            options={
                "db_table": "auction_media",
                "ordering": ["sort_order", "id"],
            },
        ),
        migrations.CreateModel(
            name="AuctionReviewChecklist",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("checklist_item_key", models.CharField(max_length=128)),
                ("checklist_item_label", models.CharField(max_length=512)),
                ("is_checked", models.BooleanField(default=False)),
                ("checked_at", models.DateTimeField(blank=True, null=True)),
            ],
            options={
                "db_table": "auction_review_checklist",
            },
        ),
        migrations.CreateModel(
            name="AuctionReviewLog",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "decision",
                    models.CharField(
                        choices=[
                            ("approve", "Approve"),
                            ("reject", "Reject"),
                            ("return_for_edit", "Return For Edit"),
                        ],
                        max_length=32,
                    ),
                ),
                ("reason", models.TextField(blank=True)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
            ],
            options={
                "db_table": "auction_review_logs",
            },
        ),
        migrations.CreateModel(
            name="AuctionShareLog",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("channel", models.CharField(max_length=64)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
            ],
            options={
                "db_table": "auction_share_logs",
            },
        ),
        migrations.CreateModel(
            name="AuctionWatchlist",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
            ],
            options={
                "db_table": "auction_watchlist",
            },
        ),
        migrations.CreateModel(
            name="Auction",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "auction_number",
                    models.CharField(db_index=True, max_length=32, unique=True),
                ),
                ("title", models.CharField(max_length=512)),
                ("description", models.TextField(blank=True)),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("draft", "Draft"),
                            ("under_review", "Under Review"),
                            ("returned_for_edit", "Returned For Edit"),
                            ("rejected", "Rejected"),
                            ("approved", "Approved"),
                            ("scheduled", "Scheduled"),
                            ("active", "Active"),
                            ("ended", "Ended"),
                            ("ended_without_bids", "Ended Without Bids"),
                            ("delivery_in_progress", "Delivery In Progress"),
                            ("closed", "Closed"),
                            ("cancelled", "Cancelled"),
                        ],
                        db_index=True,
                        default="scheduled",
                        max_length=32,
                    ),
                ),
                ("start_price", models.DecimalField(decimal_places=2, max_digits=12)),
                ("current_price", models.DecimalField(decimal_places=2, max_digits=12)),
                (
                    "reserve_price",
                    models.DecimalField(
                        blank=True, decimal_places=2, max_digits=12, null=True
                    ),
                ),
                (
                    "min_bid_increment",
                    models.DecimalField(decimal_places=2, max_digits=12),
                ),
                ("location_link", models.URLField(blank=True, max_length=1024)),
                ("starts_at", models.DateTimeField(db_index=True)),
                ("ends_at", models.DateTimeField(db_index=True)),
                ("origin_deadline", models.DateTimeField(blank=True, null=True)),
                ("extend_deadline", models.DateTimeField(blank=True, null=True)),
                ("actual_end_at", models.DateTimeField(blank=True, null=True)),
                ("extension_count", models.PositiveSmallIntegerField(default=0)),
                ("participants_count", models.PositiveIntegerField(default=0)),
                ("views_count", models.PositiveIntegerField(default=0)),
                ("is_anonymous_bidding", models.BooleanField(default=False)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                (
                    "area",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="auctions",
                        to="catalog.area",
                    ),
                ),
                (
                    "product_category",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="auctions",
                        to="catalog.productcategory",
                    ),
                ),
                (
                    "seller",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="auctions_as_seller",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "db_table": "auctions",
            },
        ),
    ]
